<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:padding="15dp"
        android:fillViewport="true"
       >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.009"
                app:srcCompat="@drawable/logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:letterSpacing="0.05"
                android:text="@string/WavesOfFood"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:fontFamily="@font/yeon_sung_regular"
                app:layout_constraintEnd_toEndOf="@id/image"
                app:layout_constraintStart_toStartOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:letterSpacing="0.06"
                android:text="@string/signUpDashBoard"
                android:textAlignment="center"
                android:textColor="@color/green2"
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/lato_regular"
                app:layout_constraintEnd_toEndOf="@id/text1"
                app:layout_constraintStart_toStartOf="@id/text1"
                app:layout_constraintTop_toBottomOf="@id/text1" />

            <androidx.appcompat.widget.LinearLayoutCompat

                android:id="@+id/linear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2">


                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green2"
                    app:fontFamily="@font/lato_regular"
                    android:letterSpacing="0.05"
                    android:text="@string/chooseLocation"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconDrawable="@drawable/location"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconMode="custom">
                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="30dp"
                        android:inputType="none"
                        android:text="@string/location"
                        android:layout_gravity="center_vertical"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ownerName"
                    app:startIconDrawable="@drawable/person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ownerNameEdt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/restaurant"
                    app:startIconDrawable="@drawable/home">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/restaurantNameEdt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEdt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordEdt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>




            <com.google.android.material.button.MaterialButton
                android:id="@+id/createAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/linear"
                app:layout_constraintStart_toStartOf="@id/linear"
                app:layout_constraintTop_toBottomOf="@id/linear"
                android:text="@string/create"
                app:backgroundTint="@color/green2"
                android:letterSpacing="0.05"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/lato_regular"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/alreadyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/createAccountButton"
                app:layout_constraintStart_toStartOf="@id/createAccountButton"
                app:layout_constraintTop_toBottomOf="@id/createAccountButton"
                android:text="@string/alreadyAccount"
                app:fontFamily="@font/lato_regular"
                android:letterSpacing="0.05"
                android:layout_marginTop="12dp"
                android:textColor="@color/green2"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>